# omgeom

./: .clang-format  CMakeLists.txt  CMakePresets.json
samples/: meta_sample.cpp
src/: main.cpp
src/omg/: omg.cppm
src/omg/meta/: meta-common.cppm  meta-data_struct.cppm  meta-tuple.cppm  meta-variant.cppm  meta.cppm
